--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
             <form>
                 <label>Show temperature in</label>
                 <select onchange="onChangeOpt(this)" name="escala">
-                    <option value="0">°C</option>
-                    <option value="1">°F</option>
+                    <option >°C</option>
+                    <option >°F</option>
                 </select>
             </form>
         </div>
