--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
         <h1> Dojo Weather</h1>
         <div class="nav-bar">
             <ul class="nav-links">
-                <li><a href="#" onclick="alerta(this)"> Burkan</a></li>
-                <li><a href="#" onclick="alerta(this)" >Chicago</a></li>
-                <li><a href="#" onclick="alerta(this)" >Dalas</a></li>
+                <li><a href="#" target="_blank" onclick="alerta(this)"> Burkan</a></li>
+                <li><a href="#" target="_blank" onclick="alerta(this)" >Chicago</a></li>
+                <li><a href="#" target="_blank" onclick="alerta(this)" >Dalas</a></li>
             </ul>
         </div>
     </div>
@@ -78,7 +78,7 @@
     </div>
     <footer>
         <div class="cookie">
-            <img src="img/cookie.png" alt="cookie">
+            <img class="cookieimg" src="img/cookie.png" alt="cookie">
             <div class="text">
                 <h3>Stop! Cookie time.</h3>
                 <p>We use cookies (sadly not the edible ones) to personalize
