--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </div>
     </div>
     <div class="rowbody">
-        <div class="caja1" id="caja1">
+        <div class="caja1">
             <h2>Hoy</h2>
             <img src="img/some_rain.png " alt="" class="imgclima">
             <p> parcialmente nublado</p>
@@ -48,7 +48,7 @@
                 <span class="tempMin" id="min_caja1">18</span>
             </p>
         </div>
-        <div class="caja2" id="caja2">
+        <div class="caja2">
             <h2>Mañana</h2>
             <img  src="img/some_sun.png" alt="" class="imgclima">
             <p> parcialmente nublado</p>
@@ -57,7 +57,7 @@
                 <span class="tempMin" id="min_caja2">19</span>
             </p>
         </div>
-        <div class="caja3" id="caja3">
+        <div class="caja3">
             <h2>Jueves</h2>
             <img src="img/some_clouds.png" alt="" class="imgclima">
             <p> parcialmente nublado</p>
@@ -66,7 +66,7 @@
                 <span class="tempMin" id="min_caja3">16</span>
             </p>
         </div>
-        <div class="caja4" id="caja4">
+        <div class="caja4">
             <h2>Viernes</h2>
             <img src="img/some_sun.png" alt="" class="imgclima">
             <p> parcialmente nublado</p>
